Apply Rollczi's suggestions